<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>uk.co.compendiumdev.thingifier</groupId>
        <artifactId>thingifier-root</artifactId>
        <version>1.0.0</version>
    </parent>

  <groupId>uk.co.compendiumdev</groupId>
  <artifactId>thingifier</artifactId>
    <version>${thingifier.version}</version>
    <packaging>jar</packaging>

  <name>thingifier</name>
  <url>https://compendiumdev.co.uk</url>

  <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <junit.jupiter.version>5.6.2</junit.jupiter.version>
  </properties>

  <dependencies>
      <dependency>
          <groupId>uk.co.compendiumdev</groupId>
          <artifactId>ercoremodel</artifactId>
          <version>${thingifier.version}</version>
      </dependency>
      <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-api</artifactId>
          <version>${junit.jupiter.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-engine</artifactId>
          <version>${junit.jupiter.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-params</artifactId>
          <version>${junit.jupiter.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>com.thoughtworks.xstream</groupId>
          <artifactId>xstream</artifactId>
          <version>1.4.19</version>
      </dependency>
      <dependency>
          <groupId>com.sparkjava</groupId>
          <artifactId>spark-core</artifactId>
          <version>2.8.0</version>
      </dependency>
      <dependency>
          <groupId>org.json</groupId>
          <artifactId>json</artifactId>
          <version>20231013</version>
      </dependency>
      <dependency>
          <groupId>io.swagger.core.v3</groupId>
          <artifactId>swagger-models</artifactId>
          <version>${swagger-models-version}</version>
      </dependency>
      <dependency>
          <groupId>com.google.code.gson</groupId>
          <artifactId>gson</artifactId>
          <version>${gson-version}</version>
      </dependency>

  </dependencies>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>15</source>
                    <target>15</target>
                </configuration>
            </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M4</version>
                </plugin>
        </plugins>
    </build>


</project>
